RESOLVED FIXED129842
[CSS Shapes] polygon y-value calc() args serialize incorrectly
https://bugs.webkit.org/show_bug.cgi?id=129842
Summary [CSS Shapes] polygon y-value calc() args serialize incorrectly
Rebecca Hauck
Reported 2014-03-06 16:10:54 PST
The attached tests file tests a polygon that has a calc() y-value: polygon(10px calc(10in)) The inline style is serialized as: polygon(nonzero, calc(10in) 0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000022278417114) The correct serialization should be: polygon(10px calc(10in) The computed style is serializes as: polygon(nonzero, 960px ) The correct serialization should be: polygon(10px 960px) For both of these cases, the default fill-rule should also be omitted - that's logged as a separate bug: https://bugs.webkit.org/show_bug.cgi?id=129840. Note: I tested this with polygons with multiple vertices and it reproduces wherever the calc() y-value is on the arg list. Note: This uses testharness.js and the relative path in the test assumes the test is run from LayoutTests/fast/shapes/parsing
Attachments
Test case for bug (1.15 KB, text/html)
2014-03-06 16:11 PST, Rebecca Hauck
no flags
Patch (4.87 KB, patch)
2014-04-04 15:44 PDT, Zoltan Horvath
no flags
Rebecca Hauck
Comment 1 2014-03-06 16:11:17 PST
Created attachment 226058 [details] Test case for bug
Zoltan Horvath
Comment 2 2014-04-04 15:44:58 PDT
Bem Jones-Bey
Comment 3 2014-04-04 15:54:14 PDT
Comment on attachment 228626 [details] Patch Global state is evil. Good catch. r=me
WebKit Commit Bot
Comment 4 2014-04-04 16:26:08 PDT
Comment on attachment 228626 [details] Patch Clearing flags on attachment: 228626 Committed r166813: <http://trac.webkit.org/changeset/166813>
WebKit Commit Bot
Comment 5 2014-04-04 16:26:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.